# avito-qa

./: BUGS.md  README.md  TESTCASES.md  Task1  Task1.md  conftest.py  pyproject.toml
client/: client.py
data/: constant.py
helpers/: help.py
tests/: test_get_api_1_item.py  test_get_api_1_seller_id_item.py  test_get_api_1_statistic.py  test_post_api_1_item.py
